Build About Me portfolio site

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <h1>Alex Jorns</h1>
-    <p>The "A" in Alex stands for amazing!</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Me - Alex Jorns</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <h1>Hi, I'm Alex Jorns!</h1>
+  <p>I’m a data science student and coding enthusiast currently in the Kode With Klossy Data Challenge!</p>
+
+  <img src="your-image.jpg" alt="Something that represents you" width="300" />
+
+  <ul>
+    <li>I love aerial arts</li>
+    <li>I flew a plane</li>
+    <li>I love the Alabama Crimson Tide/li>
+  </ul>
+
+  <h3>Check out:</h3>
+  <a href="https://akjorns.github.io/">My Personal Website</a>
+
+  <script src="script.js"></script>
+</body>
 </html>
